add: session 16 code changes

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,16 @@ input {
   padding: 1rem;
   font-size: 1.2rem;
 }
+
+.submitButton {
+  margin-left: 1rem;
+  padding: 0.5rem;
+}
+
+.submitButton:hover {
+  cursor: pointer;
+}
+
+.disButton:hover {
+  cursor: not-allowed;
+}
